# Compression-Decompression

./: README.md  bitFile.txt  bitFilei.txt
data/: check.txt  file_2.txt  file_3.txt  file_7.txt
src/: CMakeLists.txt  bitconverter.cpp  compress.cpp  uncompress.cpp
src/bitStream/: CMakeLists.txt
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  CMakeLists.txt
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp
src/encoder/: HCNode.hpp  HCTree.cpp  HCTree.hpp
test/: test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCTree.cpp
